--- a/package.json
+++ b/package.json
@@ -2,13 +2,33 @@
   "name": "nb02-seven-team3-02",
   "version": "0.0.0",
   "private": true,
+  "description": "(팀 협업 문서 링크 게시) ---",
+  "homepage": "https://github.com/nb02-seven-team3/nb02-seven-team3-02#readme",
+  "bugs": {
+    "url": "https://github.com/nb02-seven-team3/nb02-seven-team3-02/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nb02-seven-team3/nb02-seven-team3-02.git"
+  },
+  "license": "ISC",
+  "author": "",
+  "type": "module",
+  "main": "app.js",
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@prisma/client": "^6.8.2",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^16.5.0",
     "express": "~4.16.1",
     "morgan": "~1.9.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10",
+    "prisma": "^6.8.2"
   }
 }
