--- a/package.json
+++ b/package.json
@@ -6,9 +6,18 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@prisma/client": "^6.8.2",
+    "axios": "^1.9.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.5.0",
     "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "multer": "^2.0.1",
+    "pg": "^8.16.0",
+    "prisma": "^6.8.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
