--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "type": "module",
   "main": "app.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev" : "nodemon ./bin/www"
   },
   "dependencies": {
     "@prisma/client": "^6.8.2",
