--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "debug": "~2.6.9",
     "dotenv": "^16.5.0",
     "express": "~4.16.1",
+    "jest": "^29.7.0",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
