--- a/package.json
+++ b/package.json
@@ -2,24 +2,13 @@
   "name": "nb02-seven-team3-02",
   "version": "0.0.0",
   "private": true,
-  "description": "(팀 협업 문서 링크 게시) ---",
-  "homepage": "https://github.com/nb02-seven-team3/nb02-seven-team3-02#readme",
-  "bugs": {
-    "url": "https://github.com/nb02-seven-team3/nb02-seven-team3-02/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/nb02-seven-team3/nb02-seven-team3-02.git"
-  },
-  "license": "ISC",
-  "author": "",
   "type": "module",
-  "main": "app.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev" : "nodemon ./bin/www"
   },
   "dependencies": {
-    "@prisma/client": "^6.8.2",
+    "@prisma/client": "^6.9.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -29,7 +18,6 @@
     "morgan": "~1.9.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10",
-    "prisma": "^6.8.2"
+    "prisma": "^6.9.0"
   }
 }
