--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "node ./bin/www",
-    "dev" : "nodemon ./bin/www"
+    "dev": "nodemon ./bin/www"
   },
   "dependencies": {
     "@prisma/client": "^6.9.0",
@@ -19,6 +19,7 @@
     "pg": "^8.16.0"
   },
   "devDependencies": {
+    "nodemon": "^3.1.10",
     "prisma": "^6.9.0"
   }
 }
